plugins {
	id 'org.springframework.boot' version '2.5.0'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
}

group = 'br.com.helpdesk'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '1.8'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation "jakarta.xml.bind:jakarta.xml.bind-api:2.3.2"
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.4'
	// https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine
	implementation 'org.junit.jupiter:junit-jupiter-engine:5.7.2'


	// https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-jackson
	implementation group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'
	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.2'
	implementation group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.2'


	// https://mvnrepository.com/artifact/org.springframework.security/spring-security-web
	implementation group: 'org.springframework.security', name: 'spring-security-web', version: '5.5.0'

	// https://mvnrepository.com/artifact/javax.validation/validation-api
	implementation group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'

	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

test {
	useJUnitPlatform()
	
	afterTest { desc, result -> 
        logger.quiet "Test ${desc.name} [${desc.className}] with result: ${result.resultType}"
    }
    
    beforeTest { descriptor ->
     logger.lifecycle("Running test: " + descriptor.name)
    }
}
